# ballistic-deposition

./: .env  .gitignore  Cargo.toml  README.md  config.ini
analysis/: test.ipynb
config/: config_analysis.ini  config_sim.ini
src/: ini_parser.rs  main.rs  rw.rs  sim.rs
src/sim/: csv_writer.rs  random.rs
